UCDetector 1.0.0 from 2009
New features:
 - [ 2409697 ] Detect code only called from tests
 - [ 2373808 ] Classes found by text search should have no markers
 - [ 2490344 ] filters options for visibility (fields, constants, methods)

Bugfixes:
 - [ 2373808 ] Classes found by text search should have no markers
 - [ 2600845 ] UCDetector html report broken

// -----------------------------------------------------------------------------
UCDetector 0.12.0 from 2008.11.25:
New features:
 - [ 2163715 ] eclipse update site: http://ucdetector.sourceforge.net/update
 - [ 2290711 ] Detect write only fields
 - [ 2180705 ] Look for just the class name without the package name
 - Better messages for markers

Bugfixes:
 - Fix Bug [ 2153699 ] Find unused interface methods, unused abstract methods
 - Fix Bug [ 2269486 ] Constants in Interfaces Can't be private
 - Fix BUG [ 2225016 ] Don't create "0 references marker" for overridden methods

// -----------------------------------------------------------------------------
UCDetector 0.11.0 from 2008.09.30:
New features:
 - QuickFixes
 - Checkbox "Ignore bean methods"
 - When UCDetector is running, now it is possible to continue editing files in eclipse
 - Speed up detection for overridden methods
 - Feature request [ 2103460 ]: Split visibility detection in private and protected.
 - Add warning message, if there are no elements found to run detection [ 2103655 ]

Bugfixes:
 - Don't suggest to change visibility of enums constants
 - Fix Bug [ 2103382 ] Method filter not saved in preference page
 - Fix Bug [ 2103678 ] Unnecessary code doesn't recurse in sub packages
 - Fix Bug [ 2103655 ] Detect cycles does not show anything
 - Fix Bug [ 2123103 ] Don't suggest to make constructors final

// -----------------------------------------------------------------------------
UCDetector 0.10.0 from 2008-09-04:
New features:
 - Filter for methods and fields
 - Final detection for methods and fields