@@ -1,0 +1,13 @@
+package org.ucdetector.example;
+
+/**
+ * In window Preferences i have a Filter "Source folders" set to
+ * "*test*,generated," (default).
+ * 
+ * But in the problem view the classes from project/src/test/java/de/.. show up.
+ * I expected that they don't as source folders with *test* should be skipped.
+ * 
+ */
+public class Bug2715348 {
+
+}
