@@ -8,6 +8,8 @@ package org.ucdetector.preferences;
 
 import java.util.regex.Pattern;
 
+import org.eclipse.core.resources.IResource;
+import org.eclipse.core.runtime.IPath;
 import org.eclipse.jdt.core.Flags;
 import org.eclipse.jdt.core.IField;
 import org.eclipse.jdt.core.IJavaElement;
@@ -111,7 +113,14 @@ public final class Prefs {
    * matches the source folder filter
    */
   public static boolean filterPackageFragmentRoot(IPackageFragmentRoot root) {
-    return Prefs.matchFilter(Prefs.FILTER_SOURCE_FOLDER, root.getElementName());
+    // bug [ 2715348 ] Filter on Source folders does not work
+    // Match project relative path, not only last path element 
+    IResource resource = root.getResource();
+    if (resource != null && resource.getProjectRelativePath() != null) {
+      IPath path = resource.getProjectRelativePath();
+      return Prefs.matchFilter(Prefs.FILTER_SOURCE_FOLDER, path.toOSString());
+    }
+    return true;
   }
 
   /**
